# rust-seL4

./: Cargo.toml
crates/examples/microkit/http-server/helpers/smoltcp-phy-impl/: Cargo.toml
crates/examples/microkit/http-server/helpers/smoltcp-phy-impl/src/: lib.rs
crates/examples/microkit/http-server/pds/server/: Cargo.toml
crates/examples/microkit/http-server/pds/server/src/: main.rs
crates/examples/microkit/http-server/pds/virtio-net-driver/: Cargo.toml
crates/examples/microkit/http-server/pds/virtio-net-driver/src/: main.rs
crates/private/meta/: Cargo.toml
crates/sel4-hal-adapters/: Cargo.toml
crates/sel4-hal-adapters/src/smoltcp/phy/: handler.rs
crates/sel4-hal-adapters/src/smoltcp/phy/device/: inner.rs  mod.rs
