[package]
name = "sel4-hal-adapters"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>", "Ben Hamlin <hamlinb@galois.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
default = ["smoltcp-hal"]
smoltcp-hal = ["smoltcp", "sel4-shared-ring-buffer", "sel4-externally-shared", "sel4-bounce-buffer-allocator"]

[dependencies]
log = "0.4.17"
sel4-microkit = { path = "../../sel4-microkit", default-features = false }
sel4-microkit-message = { path = "../../sel4-microkit/message" }
serde = { version = "1.0.147", default-features = false }

# smoltcp-phy deps
sel4-bounce-buffer-allocator = { path = "../../sel4-bounce-buffer-allocator", optional = true }
sel4-externally-shared = { path = "../../sel4-externally-shared", features = ["unstable"], optional = true }
sel4-shared-ring-buffer = { path = "..", optional = true }

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = ["proto-ipv4", "proto-dhcpv4", "proto-dns", "socket-dhcpv4", "socket-dns", "socket-tcp"]
optional = true
